oadp: turn off gcp for 4.12 master presubmits
Signed-off-by: Tiger Kaovilai <tkaovila@redhat.com>

--- a/ci-operator/jobs/openshift/oadp-operator/openshift-oadp-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/oadp-operator/openshift-oadp-operator-master-presubmits.yaml
@@ -1047,7 +1047,7 @@ presubmits:
           secretName: result-aggregator
     trigger: (?m)^/test( | .* )4.12-operator-e2e-azure,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - ^master$
     - ^master-
