--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-addon-interop__v4.13-IIB.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-addon-interop__v4.13-IIB.yaml
@@ -67,7 +67,6 @@ tests:
     env:
       ADDON1_CONFIG: name=managed-odh;notification-email=interop-qe-ms@redhat.com
       ADDONS_OPERATORS_RUN_IN_PARALLEL: "false"
-      CLUSTER_NAME_PREFIX: rhods
       CLUSTER1_CONFIG: platform=rosa;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=g4dn.2xlarge;timeout=90m;replicas=2;fips=true;ocm-env=stage
       FIREWATCH_CONFIG: |
         [
@@ -97,15 +96,16 @@ tests:
     cluster_profile: aws-managed-cspi-qe
     env:
       ADDON1_CONFIG: name=managed-odh;notification-email=interop-qe-ms@redhat.com
-      CLUSTER1_CONFIG: name=rhods-aws-ipi;base_domain=aws.interop.ccitredhat.com;platform=aws;region=us-east-2;version=4.13;compute-machine-type=g4dn.2xlarge;timeout=90m;replicas=2;fips=true;ocm-env=stage
+      ADDONS_OPERATORS_RUN_IN_PARALLEL: "false"
+      CLUSTER_NAME_PREFIX: rhods
+      CLUSTER1_CONFIG: base_domain=aws.interop.ccitredhat.com;platform=aws;region=us-east-2;version=4.13;compute-machine-type=g4dn.2xlarge;timeout=90m;replicas=2;fips=true;ocm-env=stage
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-437"},
-          {"step": "operator-uninstall", "failure_type": "all", "classification": "Deprovisioning - Operators", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-437"},
           {"step": "addon-install", "failure_type": "all", "classification": "Provisioning - Addons", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-437"},
-          {"step": "addon-uninstall", "failure_type": "all", "classification": "Deprovisioning - Addons", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-437"},
           {"step": "addon-tests-*", "failure_type": "all", "classification": "Addons tests", "jira_project": "RHODS", "jira_epic": "RHODS-10714"},
-          {"step": "cluster-*", "failure_type": "all", "classification":  "Cluster Creation - IPI", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-437"},
+          {"step": "cluster-install-*", "failure_type": "all", "classification":  "Cluster Creation - ROSA", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-437", "group": {"name": "cluster-provision", "priority": 1}},
+          {"step": "cluster-uninstall-*", "failure_type": "all", "classification":  "Cluster Creation - ROSA", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-437", "group": {"name": "cluster-provision", "priority": 2}},
         ]
       FIREWATCH_DEFAULT_JIRA_PROJECT: MSINTEROP
       FIREWATCH_JIRA_API_TOKEN_PATH: /tmp/secrets/jira/access_token_msi
@@ -115,7 +115,6 @@ tests:
       OPERATOR3_CONFIG: name=serverless-operator;namespace=openshift-serverless
       OPERATOR4_CONFIG: name=openshift-pipelines-operator-rh;namespace=openshift-pipelines;channel=latest
       OPERATOR5_CONFIG: name=nfd;namespace=openshift-nfd;target-namespaces=openshift-nfd,
-      PARALLEL: "false"
       PULL_SECRET_NAME: pull-secret
       S3_BUCKET_NAME: openshift-cli-installer
       S3_BUCKET_PATH: openshift-ci
