--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__amd64-nightly.yaml
@@ -2494,6 +2494,7 @@ tests:
       SIZE_VARIANT: compact
       TAG_VERSION: '@4.13'
     test:
+    - ref: wait
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-gcp-ipi-filestore-csi
 - as: gcp-ipi-compact-f28-destructive
