--- a/ci-operator/config/openshift/multiarch/openshift-multiarch-master__nightly-4.14.yaml
+++ b/ci-operator/config/openshift/multiarch/openshift-multiarch-master__nightly-4.14.yaml
@@ -343,7 +343,7 @@ tests:
         Machines and Nodes \| Managed cluster should have machine resources \| should
         not have pod creation failures during install \| DNS should answer queries
         using the local DNS endpoint \| events should not repeat pathologically for
-        ns/openshift-etcd
+        ns/openshift-etcd \| egressFirewall should have no impact outside its namespace
       WORKERS: "2"
       YQ_VERSION: 4.30.5
     workflow: openshift-e2e-ibmcloud-heterogeneous-upi
