--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -98,6 +98,7 @@ tests:
 - as: hypershift-hostedcluster-e2e
   cron: 0 4 * * *
   steps:
+    cluster_profile: aws-2
     workflow: hypershift-hostedcluster-workflow
 - as: e2e-ibmcloud-iks
   cron: 0 4 * * *
