use ubi9/python-311 img for prow e2e
Signed-off-by: Tesshu Flower <tflower@redhat.com>

--- a/ci-operator/config/backube/volsync/backube-volsync-main.yaml
+++ b/ci-operator/config/backube/volsync/backube-volsync-main.yaml
@@ -19,7 +19,7 @@ binary_build_commands: make all
 build_root:
   project_image:
     dockerfile_literal: |
-      FROM registry.access.redhat.com/ubi9
+      FROM registry.access.redhat.com/ubi9/python-311
       USER root
       ENV GOVERSION=1.20.7
       RUN yum install -y diffutils gcc git jq make openssl python python-pip && \
