HyperShift QE: MCE-Agent debug

--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -134,6 +134,7 @@ tests:
     env:
       LVM_OPERATOR_SUB_CHANNEL: stable-4.14
       MCE_VERSION: "2.4"
+      SLEEP_DURATION: 12h
     workflow: hypershift-mce-agent-conformance
 - as: e2e-kubevirt-conformance
   cron: 0 4 * * *
