Make check optional

--- a/ci-operator/jobs/openshift/backplane-cli/openshift-backplane-cli-main-presubmits.yaml
+++ b/ci-operator/jobs/openshift/backplane-cli/openshift-backplane-cli-main-presubmits.yaml
@@ -197,6 +197,7 @@ presubmits:
     trigger: (?m)^/test( | .* )lint,?($|\s.*)
   - agent: kubernetes
     always_run: true
+    allow_failure: true
     branches:
     - ^main$
     - ^main-
