add the manifest-tool-local-pusher secret to the ci-tools e2e job
Signed-off-by: Nikolaos Moraitis <nmoraiti@redhat.com>

--- a/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
+++ b/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
@@ -773,6 +773,9 @@ tests:
       - mount_path: /tmp/hive
         name: hive-hive-credentials
         namespace: test-credentials
+      - mount_path: /tmp/manifest-tool
+        name: manifest-tool-local-pusher
+        namespace: ci
       from: test-bin
       resources:
         requests:
