Skip running build deploy/kuttl/tempest tests for changes to owners file

--- a/ci-operator/jobs/openstack-k8s-operators/nova-operator/openstack-k8s-operators-nova-operator-main-presubmits.yaml
+++ b/ci-operator/jobs/openstack-k8s-operators/nova-operator/openstack-k8s-operators-nova-operator-main-presubmits.yaml
@@ -110,7 +110,7 @@ presubmits:
     name: pull-ci-openstack-k8s-operators-nova-operator-main-nova-operator-build-deploy
     optional: true
     rerun_command: /test nova-operator-build-deploy
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|test/functional/.*|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
@@ -173,7 +173,7 @@ presubmits:
     name: pull-ci-openstack-k8s-operators-nova-operator-main-nova-operator-build-deploy-tempest
     optional: true
     rerun_command: /test nova-operator-build-deploy-tempest
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|test/functional/.*|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
