--- a/ci-operator/jobs/openstack-k8s-operators/openstack-baremetal-operator/openstack-k8s-operators-openstack-baremetal-operator-main-presubmits.yaml
+++ b/ci-operator/jobs/openstack-k8s-operators/openstack-baremetal-operator/openstack-k8s-operators-openstack-baremetal-operator-main-presubmits.yaml
@@ -62,7 +62,7 @@ presubmits:
     name: pull-ci-openstack-k8s-operators-openstack-baremetal-operator-main-openstack-baremetal-operator-build-deploy
     optional: true
     rerun_command: /test openstack-baremetal-operator-build-deploy
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
