--- a/ci-operator/jobs/openstack-k8s-operators/dataplane-operator/openstack-k8s-operators-dataplane-operator-main-presubmits.yaml
+++ b/ci-operator/jobs/openstack-k8s-operators/dataplane-operator/openstack-k8s-operators-dataplane-operator-main-presubmits.yaml
@@ -75,7 +75,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openstack-k8s-operators-dataplane-operator-main-dataplane-operator-build-deploy-kuttl
     rerun_command: /test dataplane-operator-build-deploy-kuttl
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|tests/functional/.*|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
@@ -137,7 +137,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openstack-k8s-operators-dataplane-operator-main-functional
     rerun_command: /test functional
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|tests/kuttl/.*|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
