--- a/ci-operator/jobs/openstack-k8s-operators/designate-operator/openstack-k8s-operators-designate-operator-main-presubmits.yaml
+++ b/ci-operator/jobs/openstack-k8s-operators/designate-operator/openstack-k8s-operators-designate-operator-main-presubmits.yaml
@@ -171,7 +171,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openstack-k8s-operators-designate-operator-main-unit
     rerun_command: /test unit
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|tests/kuttl/.*|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
