--- a/ci-operator/jobs/openstack-k8s-operators/install_yamls/openstack-k8s-operators-install_yamls-main-presubmits.yaml
+++ b/ci-operator/jobs/openstack-k8s-operators/install_yamls/openstack-k8s-operators-install_yamls-main-presubmits.yaml
@@ -62,7 +62,7 @@ presubmits:
     name: pull-ci-openstack-k8s-operators-install_yamls-main-install-yamls-deploy
     optional: true
     rerun_command: /test install-yamls-deploy
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
