--- a/ci-operator/jobs/openstack-k8s-operators/octavia-operator/openstack-k8s-operators-octavia-operator-main-presubmits.yaml
+++ b/ci-operator/jobs/openstack-k8s-operators/octavia-operator/openstack-k8s-operators-octavia-operator-main-presubmits.yaml
@@ -123,7 +123,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openstack-k8s-operators-octavia-operator-main-octavia-operator-build-deploy-kuttl
     rerun_command: /test octavia-operator-build-deploy-kuttl
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|tests/functional/.*|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
