--- a/ci-operator/jobs/openstack-k8s-operators/openstack-ansibleee-operator/openstack-k8s-operators-openstack-ansibleee-operator-main-presubmits.yaml
+++ b/ci-operator/jobs/openstack-k8s-operators/openstack-ansibleee-operator/openstack-k8s-operators-openstack-ansibleee-operator-main-presubmits.yaml
@@ -13,7 +13,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openstack-k8s-operators-openstack-ansibleee-operator-main-ansibleee-operator-build-deploy-kuttl
     rerun_command: /test ansibleee-operator-build-deploy-kuttl
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|tests/functional/.*|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
@@ -75,7 +75,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openstack-k8s-operators-openstack-ansibleee-operator-main-functional
     rerun_command: /test functional
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|tests/kuttl/.*|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
