--- a/ci-operator/jobs/openstack-k8s-operators/openstack-operator/openstack-k8s-operators-openstack-operator-main-presubmits.yaml
+++ b/ci-operator/jobs/openstack-k8s-operators/openstack-operator/openstack-k8s-operators-openstack-operator-main-presubmits.yaml
@@ -122,7 +122,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openstack-k8s-operators-openstack-operator-main-openstack-operator-build-deploy-kuttl
     rerun_command: /test openstack-operator-build-deploy-kuttl
-    skip_if_only_changed: ^renovate.json|^README.md
+    skip_if_only_changed: ^(renovate.json|.*\.md|OWNERS.*|LICENSE.*)$
     spec:
       containers:
       - args:
