volsync test-e2e run pip install without --user flag
Signed-off-by: Tesshu Flower <tflower@redhat.com>

--- a/ci-operator/config/backube/volsync/backube-volsync-main.yaml
+++ b/ci-operator/config/backube/volsync/backube-volsync-main.yaml
@@ -136,7 +136,7 @@ tests:
         export PATH="${PATH}:/alabama/.local/bin"
         # Ansible k8s modules don't use the standard KUBECONFIG env var. WTF?
         export K8S_AUTH_KUBECONFIG="${KUBECONFIG}"
-        make test-e2e-install
+        make test-e2e-install PIP_INSTALL_ARGS=
 
         # Run tests
         make cli
@@ -185,7 +185,7 @@ tests:
         export PATH="${PATH}:/alabama/.local/bin"
         # Ansible k8s modules don't use the standard KUBECONFIG env var. WTF?
         export K8S_AUTH_KUBECONFIG="${KUBECONFIG}"
-        make test-e2e-install
+        make test-e2e-install PIP_INSTALL_ARGS=
 
         # Run tests
         make cli
@@ -234,7 +234,7 @@ tests:
         export PATH="${PATH}:/alabama/.local/bin"
         # Ansible k8s modules don't use the standard KUBECONFIG env var. WTF?
         export K8S_AUTH_KUBECONFIG="${KUBECONFIG}"
-        make test-e2e-install
+        make test-e2e-install PIP_INSTALL_ARGS=
 
         # Run tests
         make cli
