Adding latest label

--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -13,7 +13,7 @@ promotion:
   namespace: chaos
   tag: latest
 releases:
-  initial:
+  latest:
     candidate:
       product: ocp
       stream: nightly
