--- a/ci-operator/config/stackrox/stackrox/stackrox-stackrox-master__ocp-4-13.yaml
+++ b/ci-operator/config/stackrox/stackrox/stackrox-stackrox-master__ocp-4-13.yaml
@@ -135,6 +135,19 @@ tests:
     test:
     - ref: stackrox-e2e
   timeout: 5h0m0s
+- as: sensor-profiling
+  optional: true
+  always_run: false
+  run_if_changed: ^(sensor\/.*)
+  steps:
+    cluster_profile: gcp
+    env:
+      COLLECTION_METHOD: core_bpf
+      TEST_SUITE: ocp-sensor-profiling
+    test:
+    - ref: stackrox-e2e
+    workflow: ipi-gcp
+  timeout: 2h0m0s
 - as: merge-qa-e2e-tests
   postsubmit: true
   steps:
