osde2e-test: add GINKGO_SKIP env param
allow for passing the osde2e var GINKGO_SKIP down to the process to
control test execution

Signed-off-by: Brady Pratt <bpratt@redhat.com>

--- a/ci-operator/step-registry/osde2e/test/osde2e-test-ref.yaml
+++ b/ci-operator/step-registry/osde2e/test/osde2e-test-ref.yaml
@@ -26,6 +26,9 @@ ref:
     - name: INSTALL_LATEST_NIGHTLY
       default: ""
       documentation: "Defines the version (major.minor) to install latest nightly image."
+    - name: GINKGO_SKIP
+      default: ""
+      documentation: "Define what tests to skip"
   documentation: |-
     Calls the service delivery osde2e framework to test all aspects of Managed OpenShift
     Clusters (OSD, ROSA, ROSA HCP).
