debug 4.14-amd64-nightly-azure-stack-upi-f28

--- a/ci-operator/config/openshift/verification-tests/openshift-verification-tests-master__installer-rehearse-4.14.yaml
+++ b/ci-operator/config/openshift/verification-tests/openshift-verification-tests-master__installer-rehearse-4.14.yaml
@@ -40,15 +40,15 @@ tests:
 - as: installer-rehearse-debug
   cron: '@yearly'
   steps:
-    cluster_profile: aws-qe
+    cluster_profile: azurestack-qe
     env:
-      BASE_DOMAIN: qe.devcluster.openshift.com
-      SLEEP_DURATION: 2h
+      SLEEP_DURATION: 4h
     post:
+    - chain: openshift-e2e-test-qe
     - ref: cucushift-installer-wait
-    - chain: cucushift-installer-rehearse-aws-ipi-deprovision
+    - chain: cucushift-installer-rehearse-azure-stack-upi-deprovision
     pre:
-    - chain: cucushift-installer-rehearse-aws-ipi-provision
+    - chain: cucushift-installer-rehearse-azure-stack-upi-provision
 - as: installer-rehearse-aws
   cron: '@yearly'
   steps:
