--- a/ci-operator/jobs/openshift/verification-tests/openshift-verification-tests-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/verification-tests/openshift-verification-tests-master-periodics.yaml
@@ -3607,7 +3607,7 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build05
+  cluster: build01
   cron: '@yearly'
   decorate: true
   decoration_config:
@@ -3617,8 +3617,8 @@ periodics:
     org: openshift
     repo: verification-tests
   labels:
-    ci-operator.openshift.io/cloud: aws
-    ci-operator.openshift.io/cloud-cluster-profile: aws-qe
+    ci-operator.openshift.io/cloud: azurestack
+    ci-operator.openshift.io/cloud-cluster-profile: azurestack-qe
     ci-operator.openshift.io/variant: installer-rehearse-4.14
     ci.openshift.io/generator: prowgen
     job-release: "4.14"
@@ -3674,7 +3674,7 @@ periodics:
         secretName: ci-pull-credentials
     - name: cluster-profile
       secret:
-        secretName: cluster-secrets-aws-qe
+        secretName: cluster-secrets-azurestack-qe
     - name: pull-secret
       secret:
         secretName: registry-pull-credentials
