run make ci-operator-config

--- a/ci-operator/config/stackrox/stackrox/stackrox-stackrox-master__ocp-4-10.yaml
+++ b/ci-operator/config/stackrox/stackrox/stackrox-stackrox-master__ocp-4-10.yaml
@@ -90,9 +90,9 @@ tests:
     - ref: stackrox-e2e
     workflow: ipi-aws
   timeout: 5h0m0s
-- as: sensor-profiling
+- always_run: false
+  as: sensor-profiling
   optional: true
-  always_run: false
   run_if_changed: ^(sensor\/.*)
   steps:
     cluster_profile: aws
