--- a/ci-operator/config/stackrox/stackrox/stackrox-stackrox-master__ocp-4-13.yaml
+++ b/ci-operator/config/stackrox/stackrox/stackrox-stackrox-master__ocp-4-13.yaml
@@ -135,9 +135,9 @@ tests:
     test:
     - ref: stackrox-e2e
   timeout: 5h0m0s
-- as: sensor-profiling
+- always_run: false
+  as: sensor-profiling
   optional: true
-  always_run: false
   run_if_changed: ^(sensor\/.*)
   steps:
     cluster_profile: gcp
