--- a/ci-operator/jobs/openshift/microshift/openshift-microshift-release-4.16-periodics.yaml
+++ b/ci-operator/jobs/openshift/microshift/openshift-microshift-release-4.16-periodics.yaml
@@ -1,18 +1,21 @@
 periodics:
 - agent: kubernetes
-  cluster: build01
-  cron: 0 0 * * 0
+  cluster: build02
+  cron: 0 1 * * *
   decorate: true
+  decoration_config:
+    skip_cloning: true
   extra_refs:
-  - base_ref: release-4.15
+  - base_ref: release-4.16
     org: openshift
-    repo: cloud-credential-operator
+    repo: microshift
   labels:
     ci-operator.openshift.io/cloud: aws
     ci-operator.openshift.io/cloud-cluster-profile: aws
+    ci-operator.openshift.io/cluster: build02
     ci.openshift.io/generator: prowgen
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-cloud-credential-operator-release-4.15-e2e-aws-manual-oidc-cron
+  name: periodic-ci-openshift-microshift-release-4.16-ocp-conformance-nightly
   spec:
     containers:
     - args:
@@ -21,8 +24,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/e2e-aws-manual-oidc-cron-cluster-profile
-      - --target=e2e-aws-manual-oidc-cron
+      - --secret-dir=/usr/local/ocp-conformance-nightly-cluster-profile
+      - --target=ocp-conformance-nightly
       command:
       - ci-operator
       image: ci-operator:latest
@@ -38,86 +41,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/e2e-aws-manual-oidc-cron-cluster-profile
-        name: cluster-profile
-      - mountPath: /secrets/gcs
-        name: gcs-credentials
-        readOnly: true
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
-      - mountPath: /etc/report
-        name: result-aggregator
-        readOnly: true
-    serviceAccountName: ci-operator
-    volumes:
-    - name: boskos
-      secret:
-        items:
-        - key: credentials
-          path: credentials
-        secretName: boskos-credentials
-    - name: ci-pull-credentials
-      secret:
-        secretName: ci-pull-credentials
-    - name: cluster-profile
-      secret:
-        secretName: cluster-secrets-aws
-    - name: pull-secret
-      secret:
-        secretName: registry-pull-credentials
-    - name: result-aggregator
-      secret:
-        secretName: result-aggregator
-- agent: kubernetes
-  cluster: build01
-  cron: 0 0 * * 0
-  decorate: true
-  extra_refs:
-  - base_ref: release-4.15
-    org: openshift
-    repo: cloud-credential-operator
-  labels:
-    ci-operator.openshift.io/cloud: aws
-    ci-operator.openshift.io/cloud-cluster-profile: aws
-    ci-operator.openshift.io/variant: periodics
-    ci.openshift.io/generator: prowgen
-    pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-cloud-credential-operator-release-4.15-periodics-e2e-aws-manual-oidc-cron
-  reporter_config:
-    slack:
-      channel: '#team-hive-alert'
-      job_states_to_report:
-      - failure
-      - error
-      report_template: Job {{.Spec.Job}} failed. <{{.Status.URL}}|View logs>
-  spec:
-    containers:
-    - args:
-      - --gcs-upload-secret=/secrets/gcs/service-account.json
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
-      - --lease-server-credentials-file=/etc/boskos/credentials
-      - --report-credentials-file=/etc/report/credentials
-      - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/e2e-aws-manual-oidc-cron-cluster-profile
-      - --target=e2e-aws-manual-oidc-cron
-      - --variant=periodics
-      command:
-      - ci-operator
-      image: ci-operator:latest
-      imagePullPolicy: Always
-      name: ""
-      resources:
-        requests:
-          cpu: 10m
-      volumeMounts:
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
-      - mountPath: /secrets/ci-pull-credentials
-        name: ci-pull-credentials
-        readOnly: true
-      - mountPath: /usr/local/e2e-aws-manual-oidc-cron-cluster-profile
+      - mountPath: /usr/local/ocp-conformance-nightly-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -150,26 +74,21 @@ periodics:
         secretName: result-aggregator
 - agent: kubernetes
   cluster: build02
-  cron: '@weekly'
+  cron: 0 1 * * *
   decorate: true
+  decoration_config:
+    skip_cloning: true
   extra_refs:
-  - base_ref: release-4.15
+  - base_ref: release-4.16
     org: openshift
-    repo: cloud-credential-operator
+    repo: microshift
   labels:
-    ci-operator.openshift.io/cloud: azure4
-    ci-operator.openshift.io/cloud-cluster-profile: azure4
-    ci-operator.openshift.io/variant: periodics
+    ci-operator.openshift.io/cloud: aws
+    ci-operator.openshift.io/cloud-cluster-profile: aws
+    ci-operator.openshift.io/cluster: build02
     ci.openshift.io/generator: prowgen
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-cloud-credential-operator-release-4.15-periodics-e2e-azure-manual-oidc
-  reporter_config:
-    slack:
-      channel: '#team-hive-alert'
-      job_states_to_report:
-      - failure
-      - error
-      report_template: Job {{.Spec.Job}} failed. <{{.Status.URL}}|View logs>
+  name: periodic-ci-openshift-microshift-release-4.16-ocp-metal-nightly
   spec:
     containers:
     - args:
@@ -178,9 +97,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/e2e-azure-manual-oidc-cluster-profile
-      - --target=e2e-azure-manual-oidc
-      - --variant=periodics
+      - --secret-dir=/usr/local/ocp-metal-nightly-cluster-profile
+      - --target=ocp-metal-nightly
       command:
       - ci-operator
       image: ci-operator:latest
@@ -196,7 +114,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/e2e-azure-manual-oidc-cluster-profile
+      - mountPath: /usr/local/ocp-metal-nightly-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -220,7 +138,61 @@ periodics:
         secretName: ci-pull-credentials
     - name: cluster-profile
       secret:
-        secretName: cluster-secrets-azure4
+        secretName: cluster-secrets-aws
+    - name: pull-secret
+      secret:
+        secretName: registry-pull-credentials
+    - name: result-aggregator
+      secret:
+        secretName: result-aggregator
+- agent: kubernetes
+  cluster: build03
+  cron: 0 5 * * 1-5
+  decorate: true
+  decoration_config:
+    skip_cloning: true
+  extra_refs:
+  - base_ref: release-4.16
+    org: openshift
+    repo: microshift
+  labels:
+    ci.openshift.io/generator: prowgen
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-microshift-release-4.16-rebase-on-nightlies
+  spec:
+    containers:
+    - args:
+      - --gcs-upload-secret=/secrets/gcs/service-account.json
+      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --report-credentials-file=/etc/report/credentials
+      - --secret-dir=/secrets/ci-pull-credentials
+      - --target=rebase-on-nightlies
+      command:
+      - ci-operator
+      image: ci-operator:latest
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /secrets/ci-pull-credentials
+        name: ci-pull-credentials
+        readOnly: true
+      - mountPath: /secrets/gcs
+        name: gcs-credentials
+        readOnly: true
+      - mountPath: /etc/pull-secret
+        name: pull-secret
+        readOnly: true
+      - mountPath: /etc/report
+        name: result-aggregator
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: ci-pull-credentials
+      secret:
+        secretName: ci-pull-credentials
     - name: pull-secret
       secret:
         secretName: registry-pull-credentials
