--- a/ci-operator/jobs/openshift/ovn-kubernetes/openshift-ovn-kubernetes-release-4.16-periodics.yaml
+++ b/ci-operator/jobs/openshift/ovn-kubernetes/openshift-ovn-kubernetes-release-4.16-periodics.yaml
@@ -1,18 +1,20 @@
 periodics:
 - agent: kubernetes
-  cluster: build01
-  cron: 0 0 * * 0
+  cluster: build03
+  cron: 0 0 */2 * *
   decorate: true
+  decoration_config:
+    skip_cloning: true
   extra_refs:
-  - base_ref: release-4.15
+  - base_ref: release-4.16
     org: openshift
-    repo: cloud-credential-operator
+    repo: ovn-kubernetes
   labels:
     ci-operator.openshift.io/cloud: aws
     ci-operator.openshift.io/cloud-cluster-profile: aws
     ci.openshift.io/generator: prowgen
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-cloud-credential-operator-release-4.15-e2e-aws-manual-oidc-cron
+  name: periodic-ci-openshift-ovn-kubernetes-release-4.16-e2e-aws-ovn-local-to-shared-gateway-mode-migration-periodic
   spec:
     containers:
     - args:
@@ -21,8 +23,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/e2e-aws-manual-oidc-cron-cluster-profile
-      - --target=e2e-aws-manual-oidc-cron
+      - --secret-dir=/usr/local/e2e-aws-ovn-local-to-shared-gateway-mode-migration-periodic-cluster-profile
+      - --target=e2e-aws-ovn-local-to-shared-gateway-mode-migration-periodic
       command:
       - ci-operator
       image: ci-operator:latest
@@ -38,7 +40,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/e2e-aws-manual-oidc-cron-cluster-profile
+      - mountPath: /usr/local/e2e-aws-ovn-local-to-shared-gateway-mode-migration-periodic-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -70,27 +72,21 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build01
-  cron: 0 0 * * 0
+  cluster: build03
+  cron: 0 0 */2 * *
   decorate: true
+  decoration_config:
+    skip_cloning: true
   extra_refs:
-  - base_ref: release-4.15
+  - base_ref: release-4.16
     org: openshift
-    repo: cloud-credential-operator
+    repo: ovn-kubernetes
   labels:
     ci-operator.openshift.io/cloud: aws
     ci-operator.openshift.io/cloud-cluster-profile: aws
-    ci-operator.openshift.io/variant: periodics
     ci.openshift.io/generator: prowgen
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-cloud-credential-operator-release-4.15-periodics-e2e-aws-manual-oidc-cron
-  reporter_config:
-    slack:
-      channel: '#team-hive-alert'
-      job_states_to_report:
-      - failure
-      - error
-      report_template: Job {{.Spec.Job}} failed. <{{.Status.URL}}|View logs>
+  name: periodic-ci-openshift-ovn-kubernetes-release-4.16-e2e-aws-ovn-shared-to-local-gateway-mode-migration-periodic
   spec:
     containers:
     - args:
@@ -99,9 +95,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/e2e-aws-manual-oidc-cron-cluster-profile
-      - --target=e2e-aws-manual-oidc-cron
-      - --variant=periodics
+      - --secret-dir=/usr/local/e2e-aws-ovn-shared-to-local-gateway-mode-migration-periodic-cluster-profile
+      - --target=e2e-aws-ovn-shared-to-local-gateway-mode-migration-periodic
       command:
       - ci-operator
       image: ci-operator:latest
@@ -117,7 +112,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/e2e-aws-manual-oidc-cron-cluster-profile
+      - mountPath: /usr/local/e2e-aws-ovn-shared-to-local-gateway-mode-migration-periodic-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -149,27 +144,21 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build02
-  cron: '@weekly'
+  cluster: build03
+  cron: 0 0 * * *
   decorate: true
+  decoration_config:
+    skip_cloning: true
   extra_refs:
-  - base_ref: release-4.15
+  - base_ref: release-4.16
     org: openshift
-    repo: cloud-credential-operator
+    repo: ovn-kubernetes
   labels:
-    ci-operator.openshift.io/cloud: azure4
-    ci-operator.openshift.io/cloud-cluster-profile: azure4
-    ci-operator.openshift.io/variant: periodics
+    ci-operator.openshift.io/cloud: ibmcloud
+    ci-operator.openshift.io/cloud-cluster-profile: ibmcloud
     ci.openshift.io/generator: prowgen
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-cloud-credential-operator-release-4.15-periodics-e2e-azure-manual-oidc
-  reporter_config:
-    slack:
-      channel: '#team-hive-alert'
-      job_states_to_report:
-      - failure
-      - error
-      report_template: Job {{.Spec.Job}} failed. <{{.Status.URL}}|View logs>
+  name: periodic-ci-openshift-ovn-kubernetes-release-4.16-e2e-ibmcloud-ipi-ovn-periodic
   spec:
     containers:
     - args:
@@ -178,9 +167,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/e2e-azure-manual-oidc-cluster-profile
-      - --target=e2e-azure-manual-oidc
-      - --variant=periodics
+      - --secret-dir=/usr/local/e2e-ibmcloud-ipi-ovn-periodic-cluster-profile
+      - --target=e2e-ibmcloud-ipi-ovn-periodic
       command:
       - ci-operator
       image: ci-operator:latest
@@ -196,7 +184,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/e2e-azure-manual-oidc-cluster-profile
+      - mountPath: /usr/local/e2e-ibmcloud-ipi-ovn-periodic-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -220,7 +208,7 @@ periodics:
         secretName: ci-pull-credentials
     - name: cluster-profile
       secret:
-        secretName: cluster-secrets-azure4
+        secretName: cluster-secrets-ibmcloud
     - name: pull-secret
       secret:
         secretName: registry-pull-credentials
