--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
@@ -1453,18 +1453,18 @@ tests:
   steps:
     cluster_profile: aws-sd-qe
     env:
-      KEEP_DURATION: "1h"
-      TEST_IMPORTANCE: Critical
       CHANNEL_GROUP: nightly
       E2E_RUN_TAGS: '@amd64 and @aws-ipi and @rosa and @network-ovnkubernetes and
         @hypershift-hosted and not @fips'
+      KEEP_DURATION: 1h
       OCM_LOGIN_ENV: integration
       OPENSHIFT_VERSION: "4.14"
       ROSA_LOGIN_ENV: integration
       TAG_VERSION: '@4.14'
       TEST_FILTERS: ~ChkUpgrade&;~NonPreRelease&;~Serial&;~Disruptive&;~DisconnectedOnly&;~HyperShiftMGMT&;~MicroShiftOnly&;~NonHyperShiftHOST&;ROSA&
+      TEST_IMPORTANCE: Critical
     test:
-      - chain: openshift-e2e-test-hypershift-qe
+    - chain: openshift-e2e-test-hypershift-qe
     workflow: rosa-aws-sts-hypershift
 - as: aws-rosa-sts-hypershift-guest-integration-full-f2
   cron: 28 20 1,3,5,7,9,11,13,15,17,19,20,23,25,27,29 * *
