--- a/ci-operator/step-registry/hypershift/conformance/hypershift-conformance-chain.yaml
+++ b/ci-operator/step-registry/hypershift/conformance/hypershift-conformance-chain.yaml
@@ -8,7 +8,6 @@ chain:
       export HYPERSHIFT_MANAGEMENT_CLUSTER_KUBECONFIG="${KUBECONFIG}"
       export HYPERSHIFT_MANAGEMENT_CLUSTER_NAMESPACE="$(echo -n clusters-${CLUSTER_NAME}|sed 's#\.#-#g')"
       export AWS_SHARED_CREDENTIALS_FILE=/etc/hypershift-pool-aws-credentials/credentials
-      CSI_CONFORMANCE_EXITCODE=0
       [[ -n ${CLUSTER_PROFILE_DIR:-} ]] && export AZURE_AUTH_LOCATION=${CLUSTER_PROFILE_DIR}/osServicePrincipal.json
       export KUBECONFIG=${SHARED_DIR}/nested_kubeconfig
       if [ -f "${SHARED_DIR}/proxy-conf.sh" ] ; then
@@ -66,16 +65,17 @@ chain:
           cat ${SHARED_DIR}/${TEST_CSI_DRIVER_MANIFEST}
           export TEST_CSI_DRIVER_FILES=${SHARED_DIR}/${TEST_CSI_DRIVER_MANIFEST}
           openshift-tests run --dry-run --provider "${TEST_PROVIDER}" openshift/csi | grep -e "External.Storage.*csi.kubevirt.io.*" | grep -v "CSI Ephemeral-volume*" > /tmp/tests_hs_kv_csi
-          TEST_ARGS="${TEST_ARGS:-} --max-parallel-tests 1 --file /tmp/tests_hs_kv_csi"
+          CSI_TEST_ARGS="${TEST_ARGS:-} --max-parallel-tests 1 --file /tmp/tests_hs_kv_csi"
           echo "${ARTIFACT_DIR}/csi"
           # Make sure the csi artifacts can be stored
           mkdir -p "${ARTIFACT_DIR}/csi"
-          openshift-tests run openshift/csi ${TEST_ARGS:-} \
+          openshift-tests run openshift/csi ${CSI_TEST_ARGS:-} \
             --provider "${TEST_PROVIDER}" \
             -o "${ARTIFACT_DIR}/csi/e2e.log" \
             --junit-dir "${ARTIFACT_DIR}/csi/junit"
-          CSI_CONFORMANCE_EXITCODE=$?
-          TEST_ARGS=""
+          if [ $? -ne 0 ]; then
+            TEST_SUITE_FAILURE_MSG="KubeVirt CSI conformance tests returned failure(s)"
+          fi
 
           # This looks counterintuitive. Here's an explanation.
           #
@@ -115,7 +115,10 @@ chain:
         --provider "${TEST_PROVIDER}" \
         -o "${ARTIFACT_DIR}/e2e.log" \
         --junit-dir "${ARTIFACT_DIR}/junit"
-      exit CSI_CONFORMANCE_EXITCODE
+      if [ -n "$TEST_SUITE_FAILURE_MSG" ]; then
+        echo "Cluster type: $CLUSTER_TYPE encountered a failure condition: $TEST_SUITE_FAILURE_MSG"
+        exit 1
+      fi
     credentials:
     - mount_path: /etc/hypershift-pool-aws-credentials
       name: hypershift-pool-aws-credentials
