pmlogs artifacts will not exist if the iso build or boot stages fail, which then causes the pmlogs step to fail as well.  ignore pmlogs failures
Signed-off-by: Jon Cope <jcope@redhat.com>

--- a/ci-operator/step-registry/openshift/microshift/infra/pmlogs/openshift-microshift-infra-pmlogs-ref.yaml
+++ b/ci-operator/step-registry/openshift/microshift/infra/pmlogs/openshift-microshift-infra-pmlogs-ref.yaml
@@ -1,6 +1,8 @@
 ref:
   as: openshift-microshift-infra-pmlogs
   from: test-runtime
+  best_effort: true
+  cli: latest
   commands: openshift-microshift-infra-pmlogs-commands.sh
   resources:
     requests:
