--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.14-nightly-x86.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.14-nightly-x86.yaml
@@ -21,6 +21,21 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
+- as: perfscale-rosa-multiaz-control-plane-252nodes-periodic
+  cron: 0 12 * * 6
+  steps:
+    cluster_profile: aws-perfscale
+    env:
+      CHANNEL_GROUP: nightly
+      COMPUTE_MACHINE_TYPE: m5.xlarge
+      ENABLE_AUTOSCALING: "false"
+      MULTI_AZ: "true"
+      OPENSHIFT_VERSION: "4.14"
+      REPLICAS: "252"
+    test:
+    - chain: openshift-qe-control-plane
+    workflow: rosa-aws-sts
+  timeout: 8h0m0s
 - as: perfscale-rosa-multiaz-control-plane-120nodes-periodic
   cron: 0 12 * * 6
   steps:
