--- a/ci-operator/step-registry/hypershift/hostedcluster/destroy/hostedcluster/hypershift-hostedcluster-destroy-hostedcluster-ref.yaml
+++ b/ci-operator/step-registry/hypershift/hostedcluster/destroy/hostedcluster/hypershift-hostedcluster-destroy-hostedcluster-ref.yaml
@@ -3,6 +3,9 @@ ref:
   best_effort: true
   cli: latest
   env:
+  - name: PLATFORM
+    default: "aws"
+    documentation: "The platform(AWS/PowerVS) of the HostedCluster. AWS by default"
   - name: HYPERSHIFT_BASE_DOMAIN
     default: ""
     documentation: "The cluster's FQDN will be a subdomain of the base domain."
