--- a/ci-operator/step-registry/hypershift/hostedcluster/create/hostedcluster/hypershift-hostedcluster-create-hostedcluster-ref.yaml
+++ b/ci-operator/step-registry/hypershift/hostedcluster/create/hostedcluster/hypershift-hostedcluster-create-hostedcluster-ref.yaml
@@ -2,6 +2,9 @@ ref:
   as: hypershift-hostedcluster-create-hostedcluster
   cli: latest
   env:
+  - name: PLATFORM
+    default: "aws"
+    documentation: "The platform(AWS/PowerVS) of the HostedCluster. AWS by default"
   - name: HYPERSHIFT_NODE_COUNT
     default: "3"
     documentation: "The number nodes to automatically create and join to the cluster."
